# callensights

./: ._.git  .env  .gitignore  Dockerfile  Profile  application.py  buildspec.yaml  buildspec.yml  codebuild.yaml  docker-compose.yml  flask_app.py  main.py  pyproject.toml  readme.md  requirements.txt  run.sh  test  update_media_attributes.py
.ebextensions/: 01_common_config.config  02_dev-specific.config  dev.config  prod.config
.elasticbeanstalk/: config.yml
.github/workflows/: aws_tf_apply.yml  aws_tf_plan.yml  main.yml  python-app.yml  vertocity_dev.yml  vertocity_prod.yml
app/db_scripts/: ddl.sql
app/src/common/app_logging/: filter.py  logging.py  logging_handlers.py
app/src/common/config/: __init__.py  app_settings.py  database.py  secret_manager.py
app/src/common/constants/: global_constants.py
app/src/common/decorators/: db_exception_handlers.py
app/src/common/enum/: account_enums.py  background_enums.py  custom_error_code.py  route_paths_enum.py
app/src/common/exceptions/: application_exception.py  exception_handlers.py  exceptions.py
app/src/common/models/: db_models.py
app/src/common/security/: authorization.py
app/src/core/models/: db_models.py
app/src/core/repositories/: account_repository.py  analytics_repository.py  aws_repositories.py  background_repository.py  candidate_repository.py  create_user_repository.py  dashboard_repository.py  general_repository.py  geniric_repository.py  job_repository.py  lead_repository.py  media_repository.py  submission_repository.py  upload_media_repository.py  upload_repository.py  user_repository.py
app/src/core/routers/: __init__.py  account_routers.py  analytics_router.py  background_routers.py  candidate_routers.py  dashboard_routers.py  (+6 more)
beanstalk/: dev.tfvars  main.tf  prod.tfvars  provider.tf  vars.tf
nginx/: default.conf
templates/: index.html  success.html
(+53 files in other folders)
