[tool.poetry]
name = "callensights"
version = "0.1.0"
description = "Callensights API Backend"
authors = ["Chandrashekhar R <shekhar.rachakonda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = "0.23.2"
boto3 = "1.28.77"
pyjwt = "2.8.0"
pymongo = "4.6.1"
mysql-connector-python = "8.2.0"
sqlalchemy = "2.0.22"
bcrypt = "4.1.2"
rsa = "4.9"
passlib = "1.7.4"
pydantic-settings = "2.0.3"
watchtower = "^3.0.1"
cryptography = "41.0.7"
gunicorn = "20.1.0"
greenlet = "3.0.1"
idna = "3.4"
annotated-types = "0.6.0"
anyio = "3.7.1"
botocore = "1.31.77"
cffi = "1.16.0"
click = "8.1.7"
colorama = "0.4.6"
dnspython = "2.4.2"
ecdsa = "0.18.0"
email-validator = "2.1.0.post1"
h11 = "0.14.0"
jmespath = "1.0.1"
protobuf = "4.21.12"
pyasn1 = "0.5.1"
pycparser = "2.21"
pydantic = "2.4.2"
pydantic-core = "2.10.1"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
s3transfer = "0.7.0"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.27.0"
typing-extensions = "4.8.0"
urllib3 = "2.0.7"
openai = "^1.13.3"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
